# Movgrab

./: .travis.yml  CHANGES  INSTALL  Makefile  Makefile.in  README  README.md  cbsnews.c  cbsnews.h  common.c  common.h  config.status  configure  configure.ac  configure.in  containerfiles.c  containerfiles.h  dailymotion.c  dailymotion.h  display.c  display.h  download.c  download.h  ehow.c  ehow.h  extract_text.c  extract_text.h  ign.c  ign.h  main.c  outputfiles.c  outputfiles.h  players.c  players.h  selectformat.c  selectformat.h  servicetypes.c  servicetypes.h  settings.c  settings.h  (+2 more)
Docs/: ConfigFile.txt  HowToAddSites.txt  Proxys.txt  Radio.txt  Usage.txt
autom4te.cache/: output.0  requests  traces.0
libUseful-2.0/: Hash.c  Hash.h  Makefile  Makefile.in  PatternMatch.c  config.status  file.h  libUseful.h  socket.c  socket.h
libUseful-2.4/: ConnectManager.c  ConnectionChain.c  Log.c  Makefile  Makefile.in  Markup.c  Markup.h  PatternMatch.c  Tokenizer.c  configure  configure.ac  file.c  file.h  http.c  http.h  libUseful.h  list.c  list.h  mmap.c  pty.c  socket.c  socket.h  string.c  string.h  tar.c  test.c  unix_socket.c
libUseful-2.6/: ConnectionChain.c  DataProcessing.c  FileSystem.c  FileSystem.h  Makefile  Makefile.in  ParseURL.c  SpawnPrograms.c  SpawnPrograms.h  Time.c  Vars.c  ansi.c  config.status  file.c  http.c  includes.h  pty.h  socket.c  socket.h  ssh.c
libUseful-2.8/: Compression.c  Compression.h  ConnectionChain.c  ConnectionChain.h  DataParser.c  DataParser.h  DataProcessing.c  DataProcessing.h  Encodings.c  Encodings.h  Errors.c  Errors.h  (+74 more)
(+38 files in other folders)
